# Robot_Manipulator

./: .gitignore  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  QUICKSTART_MG995.md  README.md  README_LIGHTWEIGHT_MODE.md  README_RPI_GPIO.md  README_TRAJECTORIES.md  SIMPLE_TRAJECTORY_GENERATOR.md  WIRING_DIAGRAM.txt  launch_all.sh  setup_rpi_gpio.sh  test_gpio_servos.sh
files/: clean.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_scripts/share/cpp_scripts/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cpp_scripts/share/cpp_scripts/cmake/: cpp_scriptsConfig.cmake
install/manipulator_arduino_firmware/share/manipulator_arduino_firmware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/manipulator_arduino_firmware/share/manipulator_arduino_firmware/cmake/: manipulator_arduino_firmwareConfig.cmake
install/manipulator_controller/include/include/manipulator_controller/: manipulator_interface.hpp
install/manipulator_controller/share/manipulator_controller/: local_setup.dsv  local_setup.sh  manipulator_controller_plugins.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manipulator_controller/share/manipulator_controller/cmake/: manipulator_controllerConfig.cmake
install/manipulator_controller/share/manipulator_controller/config/: manipulator_controllers.yaml
install/manipulator_description/share/manipulator_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/manipulator_description/share/manipulator_description/cmake/: manipulator_descriptionConfig.cmake
install/manipulator_description/share/manipulator_description/launch/: display.launch.py  gazebo.launch.py
install/manipulator_description/share/manipulator_description/urdf/: inertia.ipynb  manipulator.urdf.xacro  manipulator_gazebo.xacro  manipulator_ros2_control.xacro
install/manipulator_moveit/share/manipulator_moveit/: local_setup.sh  package.sh
install/manipulator_moveit/share/manipulator_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  manipulator.srdf  moveit_controllers.yaml  planning_python_api.yaml
install/manipulator_moveit/share/manipulator_moveit/launch/: moveit.launch.py
install/manipulator_msgs/share/manipulator_msgs/: local_setup.sh  package.sh
install/manipulator_remote/share/manipulator_remote/: local_setup.sh  package.sh  package.xml
install/manipulator_remote/share/manipulator_remote/launch/: real_robot.launch.py  real_robot_lightweight.launch.py  remote_interface_lightweight.launch.py
install/python_scripts/share/python_scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/python_scripts/share/python_scripts/launch/: generate_trajectories.launch.py  simple_trajectory_generator.launch.py
log/: latest_build  latest_list
savedTrajectories/: full_smooth_trajectory.json  task_0_arm_trajectory.json  task_0_gripper_trajectory.json  task_1_arm_trajectory.json  task_1_gripper_trajectory.json  task_2_arm_trajectory.json  task_2_gripper_trajectory.json  task_5.json  task_6.json  task_7.json  task_8.json
servoTrajectories/: servo_pwm_compact.csv  servo_trajectories.csv  servo_trajectories.json
src/cpp_scripts/: CMakeLists.txt  package.xml
src/manipulator_arduino_firmware/: CMakeLists.txt  package.xml
src/manipulator_arduino_firmware/firmware/motor_90_pos/: motor_90_pos.ino
src/manipulator_arduino_firmware/firmware/motor_test_serial_control/: motor_test_serial_control.ino
src/manipulator_arduino_firmware/firmware/motor_test_sweep/: motor_test_sweep.ino
src/manipulator_arduino_firmware/firmware/robot_control_single_motor/: robot_control_single_motor.ino
src/manipulator_arduino_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/manipulator_arduino_firmware/firmware/simple_serial_tx_rx/: simple_serial_tx_rx.ino
src/manipulator_arduino_firmware/firmware/simple_servo_control/: simple_servo_control.ino
src/manipulator_arduino_firmware/manipulator_arduino_firmware/: simple_serial_receiver.py  simple_serial_transmitter.py
src/manipulator_controller/: CMakeLists.txt  README.md  manipulator_controller_plugins.xml  package.xml
src/manipulator_controller/config/: controller_manager.yaml  manipulator_controllers.yaml
src/manipulator_controller/include/manipulator_controller/: manipulator_interface_gpio.hpp
src/manipulator_controller/launch/: controller.launch.py
src/manipulator_controller/src/: manipulator_interface.cpp  manipulator_interface_gpio.cpp
src/manipulator_description/: CMakeLists.txt  package.xml
src/manipulator_description/launch/: display.launch.py  gazebo.launch.py
src/manipulator_description/meshes/: bracket_long.STL  bracket_middle.STL  bracket_short.STL  horn.STL  horn2.STL  motor.STL  motor_with_horns.STL  rod.STL
src/manipulator_description/rviz/: display.rviz
src/manipulator_description/urdf/: manipulator.urdf.xacro  manipulator_ros2_control.xacro
src/manipulator_moveit/: CMakeLists.txt  package.xml
src/manipulator_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  planning_python_api.yaml
src/manipulator_moveit/launch/: moveit.launch.py
src/manipulator_msgs/: CMakeLists.txt  package.xml
src/manipulator_remote/: CMakeLists.txt  package.xml
src/manipulator_remote/launch/: real_robot.launch.py  real_robot_lightweight.launch.py  remote_interface.launch.py
src/manipulator_remote/manipulator_remote/: task_server.py  task_server_lightweight.py  task_server_rpi.py
src/python_scripts/: setup.py
src/python_scripts/launch/: moveit_interface.launch.py
src/python_scripts/python_scripts/: generate_servo_trajectories.py  generate_trajectories.py  moveit_interface.py  simple_lifecycle_node.py  simple_trajectory_generator.py  visualize_servo_trajectories.py
(+14 files in other folders)
